# cpu_render

./: README.md
renderer/: CMakeLists.txt  main.cc
renderer/core/: api.h  darray.h  graphics.cc  graphics.h  macro.h  maths.cc  maths.h  mesh.cc  mesh.h  private.cc  private.h  scene.cc  scene.h  skeleton.cc  skeleton.h  texture.cc  texture.h
renderer/runner/: CMakeLists.txt  run_blinn.cc  run_blinn.h  run_helper.cc  run_helper.h  run_pbr.cc  run_pbr.h
renderer/scenes/: blinn_scenes.cc  blinn_scenes.h  scene_helper.h
